--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,46 +1,7 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react/jsx-runtime",
-    "next/core-web-vitals",
-    "prettier"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "prettier/prettier": "error",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".ts",
-          ".tsx"
-        ]
-      }
-    ],
-    "import/extensions": [
-      "error", {
-        ".ts": "never"
-      }
-    ],
-    "import/prefer-default-export": "off"
+    "prefer-const": "error",
+    "no-unused-vars": "warn"
   }
 }
