--- a/package.json
+++ b/package.json
@@ -9,31 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.6.0",
     "md5": "^2.3.0",
-    "next": "12.3.1",
+    "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
     "@types/md5": "^2.3.2",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.21",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.23.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "typescript": "4.8.3"
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.21",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.3.0"
   }
 }
